[package]
name = "httpsig"
version = "0.1.0"
authors = ["Fabien <45664395+fimbault@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "=0.10", features = ["blocking"]}
http-sig = { version = "=0.3.1", features=["reqwest"]}
rouille = {version = "3.0.0", optional = true}